# pcommit

./: .gitignore  Cargo.toml  LICENSE  README.md  build_macos.sh
.github/workflows/: build.yml  coverage.yml  release.yml  rust.yml
src/: git.rs  input.rs  lib.rs  main.rs
