[package]
name = "pcommit"
version = "1.0.3"
edition = "2021"
authors = ["mael leclerc <mael.leclerc@protonmail.com"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rustyline = "9.1.0"
clap = { version = "3.1.6", features = ["derive"] }
