[package]
name = "pcommit"
version = "1.0.3"
edition = "2021"
authors = ["mael leclerc <mael.leclerc@protonmail.com"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
git2 = "0.15.0"
dialoguer = "0.10.2"
console = "0.15.1"
anyhow = "1.0"
clap = { version = "3.1.6", features = ["derive"] }
